test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/pointer_conversions/compare_void_ptr_to_int.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CCast: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    Pointer: 
                      Void: 
                    None: 
                  CConstant: 
                    CConstULong: 
                      TULong: 20
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
